--- a/admin/app/views/admin/coupons/index.html.erb
+++ b/admin/app/views/admin/coupons/index.html.erb
@@ -1,21 +1,10 @@
-<%# @result.coupons.each do |coupon| %>
-  <%# @coupon = coupon %>
-  <%#= render 'coupon', locals: { coupon: @coupon } %>
-<%# end %>
-
-<%# content_for :sidebar do %>
-  <!--h1>ADMIN</h1>
-  <p><%= @result.pubkey_json %></p>
-  <p><%= @result.pubkey_header %></p-->
-<%# end %>
-
 <div class="users col-md-12">
   <div class="row">
     <div class="col-md-6">
       <h1 class="pull-right">Listing coupons</h1>
     </div>
     <div class="col-md-6">
-      <h1><%= link_to 'Generate coupon', generate_creation_transaction_path, class: "btn btn-success" %></h1>
+      <h1><%= link_to 'Generate coupon', admin_new_coupon_path, class: "btn btn-success" %></h1>
     </div>
   </div>
 
@@ -29,7 +18,7 @@
     </thead>
 
     <tbody>
-      <% @result.coupons.each do |coupon| %>
+      <% @coupons.each do |coupon| %>
         <tr>
           <td><%= coupon["id"] %></td>
           <td><%= coupon["title"] %></td>
@@ -41,40 +30,3 @@
     </tbody>
   </table>
 </div>
-
-
-<div class="users col-md-12">
-  <div class="row">
-    <div class="col-md-6">
-      <h1 class="pull-right">Listing transactions</h1>
-    </div>
-    <div class="col-md-6">
-      <h1><%= link_to 'Generate coupon', generate_creation_transaction_path, class: "btn btn-success" %></h1>
-    </div>
-  </div>
-
-  <table class="table table-striped table-condensed">
-    <thead>
-      <tr>
-        <th>Creator public key</th>
-        <!--th>creation creatorAddress</th>
-        <th>owner</th-->
-        <th>Issue</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @transactions.each do |transaction| %>
-        <tr>
-          <td><%= transaction %></td>
-          <!--td>lol<%#= transaction["creations"][0]["creatorAddress"] if !transaction["creations"].empty? %></td>
-          <td>lol<%#= "Gifted" if !transaction["inputs"].empty? && transaction["inputs"][0]["outputId"] %></td-->
-          <td><%= render 'issue_form', creator_address: transaction %><td>
-          <!--td><%= link_to 'Show', '#', class: "btn btn-warning" %></td-->
-          <!--td><%= link_to 'Destroy', '#', class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td-->
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
