--- a/admin/app/views/layouts/_navbar.html.erb
+++ b/admin/app/views/layouts/_navbar.html.erb
@@ -14,18 +14,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-target">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Coupons", admin_coupons_path %>
-        <li><a href="#">Admin</a></li>
+        <li><%= link_to "Transactions", root_path %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Old Stuff <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to "Users", users_path %></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><%= link_to "Coupons", admin_coupons_path %></li>
           </ul>
         </li>
       </ul>
@@ -34,11 +29,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">All users</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Logout</a></li>
           </ul>
         </li>
       </ul>
