--- a/admin/app/views/transactions/index.html.erb
+++ b/admin/app/views/transactions/index.html.erb
@@ -1,37 +1,6 @@
 <div class="users col-md-12">
-  <div class="row">
-    <div class="col-md-6">
-      <h1 class="pull-right">Listing transactions</h1>
-      <p align="right">
-        Public address of mobile client: 1Kau4L6BM1h6QzLYubq1qWrQSjWdZFQgMb
-      </p>
-    </div>
-    <div class="col-md-6">
-      <h1><%= link_to 'Generate coupon', generate_creation_transaction_path, class: "btn btn-success" %></h1>
-    </div>
-  </div>
-
-  <table class="table table-striped table-condensed">
-    <thead>
-      <tr>
-        <th>Creator public key</th>
-        <!--th>creation creatorAddress</th>
-        <th>owner</th-->
-        <th>Issue</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @transactions.each do |transaction| %>
-        <tr>
-          <td><%= transaction %></td>
-          <!--td>lol<%#= transaction["creations"][0]["creatorAddress"] if !transaction["creations"].empty? %></td>
-          <td>lol<%#= "Gifted" if !transaction["inputs"].empty? && transaction["inputs"][0]["outputId"] %></td-->
-          <td><%= render 'issue_form', creator_address: transaction %><td>
-          <!--td><%= link_to 'Show', '#', class: "btn btn-warning" %></td-->
-          <!--td><%= link_to 'Destroy', '#', class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td-->
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <%= render 'generate_form' %>
+  <%= render 'transactions' %>
+  <%= render 'coupons_in_circulation' %>
+  <%= render 'returned_coupons' %>
 </div>
