Adapting to library 2.0

--- a/admin/app/views/transactions/_generate_form.html.erb
+++ b/admin/app/views/transactions/_generate_form.html.erb
@@ -1,5 +1,5 @@
 <h2>Generate new coupon</h2>
-<%= link_to 'Generate coupon', generate_creation_transaction_path, class: "btn btn-success" %>
+<%= link_to 'Generate coupon', generate_create_transaction_path, method: :post, class: "btn btn-success" %>
 <br>
 <br>
 <p>
