--- a/admin/app/views/transactions/index.html.erb
+++ b/admin/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="users col-md-12">
   <%= render 'generate_form' %>
-  <%= render 'transactions' %>
+  <%= render 'coupons' %>
   <%= render 'coupons_in_circulation' %>
   <%= render 'returned_coupons' %>
 </div>
