--- a/admin/app/views/transactions/_coupons.html.erb
+++ b/admin/app/views/transactions/_coupons.html.erb
@@ -13,11 +13,11 @@
   </thead>
 
   <tbody>
-    <% @transactions.each do |transaction| %>
+    <% @coupons.each do |coupon| %>
       <tr>
-        <td><%= transaction %></td>
-        <td>Lulz</td>
-        <td><%= render 'issue_form', creator_address: transaction %></td>
+        <td><%= truncate(coupon['creatorAddress'], length: 13) %></td>
+        <td><%= coupon['payload'] %></td>
+        <td><%= render 'issue_form', creator_address: coupon['creatorAddress'] %></td>
         <td><%= link_to 'Delete', '#', class: "btn btn-warning"%></td>
       </tr>
     <% end %>
