--- a/admin/app/views/users/_form.html.erb
+++ b/admin/app/views/users/_form.html.erb
@@ -4,7 +4,7 @@
                          label_col: "col-md-2",
                          control_col: "col-md-6") do |f| %>
     <%= f.text_field :email %>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
 
     <%= f.submit nil, class: "btn btn-success col-md-4" %>
   <% end %>
