--- a/admin/app/views/layouts/_navbar.html.erb
+++ b/admin/app/views/layouts/_navbar.html.erb
@@ -24,25 +24,30 @@
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Help</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">All users</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      <% if current_user %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Help</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Profile', user_path(current_user) %></li>
+              <li><%= link_to 'All users', users_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to 'Logout', logout_path %></li>
+            </ul>
+          </li>
+        </ul>
+      <% else %>
+        <%= form_tag(signin_path, role: 'form', class: "navbar-form navbar-right") do %>
+          <div class="form-group">
+            <%= text_field_tag :email, '', placeholder: 'Email', class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= password_field_tag :password, '', placeholder: 'Password', class: 'form-control' %>
+          </div>
+          <%= submit_tag 'Login', class: "btn btn-primary" %>
+        <% end %>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
