--- a/admin/app/views/users/index.html.erb
+++ b/admin/app/views/users/index.html.erb
@@ -7,12 +7,13 @@
       <h1><%= link_to 'New User', new_user_path, class: "btn btn-success" %></h1>
     </div>
   </div>
-
-  <table class="table table-striped">
+  <table class="table table-striped table-condensed">
     <thead>
       <tr>
         <th>Email</th>
         <th>Password</th>
+        <th>Create address</th>
+        <th>Return address</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -22,6 +23,8 @@
         <tr>
           <td><%= user.email %></td>
           <td><%= user_password_message(user) %></td>
+          <td><%= truncate(user.create_address, length: 13) %></td>
+          <td><%= truncate(user.return_address, length: 13) %></td>
           <td><%= link_to 'Show', user, class: "btn btn-primary" %></td>
           <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-warning" %></td>
           <td><%= link_to 'Destroy', user, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
