--- a/admin/app/views/transactions/_issue_form.html.erb
+++ b/admin/app/views/transactions/_issue_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_tag("/generate_send_transaction") do %>
   <%= text_field_tag 'public_key', creator_address, hidden: true %>
+  <%= text_field_tag 'payload', payload, hidden: true %>
   <%= text_field_tag "receiver_address" %>
   <%= submit_tag 'Issue', class: "btn btn-primary" %>
 <% end %>
