--- a/admin/app/views/transactions/_returned_coupons.html.erb
+++ b/admin/app/views/transactions/_returned_coupons.html.erb
@@ -9,7 +9,7 @@
   </thead>
 
   <tbody>
-    <% @coupons.each do |coupon| %>
+    <% @coupons_returned.each do |coupon| %>
       <tr>
         <td><%= coupon['creatorAddress'] %></td>
         <td><%= coupon['payload'] %></td>
