--- a/admin/app/views/transactions/_generate_form.html.erb
+++ b/admin/app/views/transactions/_generate_form.html.erb
@@ -3,7 +3,7 @@
   <div class="form-group">
     <label for="payload">Payload</label>
     <%= text_area_tag 'payload', '', class: 'form-control' %>
-    <p class="help-block">Enter the payload for the coupon, and click the generate button.</p>
+    <p class="help-block">Enter the payload, without newlines, for the coupon, and click the generate button.</p>
   </div>
   <%= submit_tag 'Generate coupon', class: "btn btn-success" %>
 <% end %>
