--- a/admin/app/views/transactions/_coupons.html.erb
+++ b/admin/app/views/transactions/_coupons.html.erb
@@ -18,7 +18,7 @@
         <td><%= truncate(coupon['creatorAddress'], length: 13) %></td>
         <td><%= coupon['payload'] %></td>
         <td><%= render 'issue_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
-        <td><%= link_to 'Delete', '#', class: "btn btn-warning"%></td>
+        <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create' %></td>
       </tr>
     <% end %>
   </tbody>
