--- a/admin/app/views/transactions/_coupons.html.erb
+++ b/admin/app/views/transactions/_coupons.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @coupons.each do |coupon| %>
       <tr>
-        <td><%= truncate(coupon['creatorAddress'], length: 13) %></td>
+        <td><%= translate_address coupon['creatorAddress'] %></td>
         <td><%= coupon['payload'] %></td>
         <td><%= render 'issue_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
         <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create' %></td>
