--- a/admin/app/views/users/show.html.erb
+++ b/admin/app/views/users/show.html.erb
@@ -21,6 +21,16 @@
     <%= @user.return_address %>
   </p>
 
+  <p>
+    <strong>Word create address:</strong>
+    <%= translate_address @user.create_address %>
+  </p>
+
+  <p>
+    <strong>Word return address:</strong>
+    <%= translate_address @user.return_address %>
+  </p>
+
   <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-warning col-md-2" %>
   <%= link_to 'Back', users_path, class: "btn btn-info col-md-2" %>
 </div>
