--- a/admin/app/assets/stylesheets/users.css.scss
+++ b/admin/app/assets/stylesheets/users.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .users {
-  .btn:visited { color:#FFF; }
+  .btn:visited { color:#000000; }
 
   .footer-links { margin-top: 40px; }
 }
