--- a/admin/app/views/transactions/index.html.erb
+++ b/admin/app/views/transactions/index.html.erb
@@ -1,5 +1,7 @@
 <div class="users col-md-12">
-  <%= render 'generate_form' %>
+  <div class="new-coupon-form">
+    <%= render 'generate_form' %>
+  </div>
   <%= render 'coupons' %>
   <%= render 'coupons_in_circulation' %>
   <%= render 'returned_coupons' %>
