--- a/admin/app/views/layouts/_navbar.html.erb
+++ b/admin/app/views/layouts/_navbar.html.erb
@@ -14,19 +14,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-target">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Transactions", root_path %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Old Stuff <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Users", users_path %></li>
-            <li class="divider"></li>
-            <li><%= link_to "Coupons", admin_coupons_path %></li>
-          </ul>
-        </li>
+        <li><%= link_to 'Coupons', coupons_path %>
       </ul>
       <% if current_user %>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Help</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -45,7 +36,7 @@
           <div class="form-group">
             <%= password_field_tag :password, '', placeholder: 'Password', class: 'form-control' %>
           </div>
-          <%= submit_tag 'Login', class: "btn btn-primary" %>
+          <%= submit_tag 'Login', class: "btn btn-default" %>
         <% end %>
       <% end %>
     </div><!-- /.navbar-collapse -->
