--- a/admin/app/views/transactions/_coupons_in_circulation.html.erb
+++ b/admin/app/views/transactions/_coupons_in_circulation.html.erb
@@ -1,10 +1,10 @@
-<h2>Your Coupons in circulation</h2>
+<h2>Your circulating coupons</h2>
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Creator address</th>
-      <th>Payload</th>
-      <th>Owner address</th>
+      <th>Creator</th>
+      <th>Title</th>
+      <th>Owner</th>
     </tr>
   </thead>
 
