--- a/admin/app/views/transactions/_delete_form.html.erb
+++ b/admin/app/views/transactions/_delete_form.html.erb
@@ -2,5 +2,5 @@
   <%= text_field_tag 'public_key', creator_address, hidden: true %>
   <%= text_field_tag 'payload', payload, hidden: true %>
   <%= text_field_tag 'priv_key', private_key, hidden: true %>
-  <%= submit_tag 'Delete', class: "btn btn-warning" %>
+  <%= submit_tag submit_name, class: "btn btn-default" %>
 <% end %>
