--- a/admin/app/views/users/index.html.erb
+++ b/admin/app/views/users/index.html.erb
@@ -1,17 +1,11 @@
 <div class="users col-md-12">
   <div class="row">
-    <div class="col-md-6">
-      <h1 class="pull-right">Listing users</h1>
-    </div>
-    <div class="col-md-6">
-      <h1><%= link_to 'New User', new_user_path, class: "btn btn-success" %></h1>
-    </div>
+    <h2>Listing users</h1>
   </div>
   <table class="table table-striped table-condensed">
     <thead>
       <tr>
         <th>Email</th>
-        <th>Password</th>
         <th>Create address</th>
         <th>Return address</th>
         <th colspan="3"></th>
@@ -22,14 +16,17 @@
       <% @users.each do |user| %>
         <tr>
           <td><%= user.email %></td>
-          <td><%= user_password_message(user) %></td>
-          <td><%= truncate(user.create_address, length: 13) %></td>
-          <td><%= truncate(user.return_address, length: 13) %></td>
-          <td><%= link_to 'Show', user, class: "btn btn-primary" %></td>
-          <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-warning" %></td>
-          <td><%= link_to 'Destroy', user, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= translate_address user.create_address %></td>
+          <td><%= translate_address user.return_address %></td>
+          <td><%= link_to 'Show', user, class: "btn btn-default" %></td>
+          <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-default" %></td>
+          <td><%= link_to 'Destroy', user, class: "btn btn-default", method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
+
+  <div class="col-md-12">
+    <%= link_to 'New User', new_user_path, class: "btn btn-default col-md-12" %>
+  </div>
 </div>
