--- a/admin/app/views/users/show.html.erb
+++ b/admin/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <div class="users">
-  <h1><%= @user.email %></h1>
+  <div class="pull-right">
+    <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default" %>
+  </div>
+  <h2><%= @user.email %></h2>
 
   <p>
     <strong>Email:</strong>
@@ -7,30 +10,14 @@
   </p>
 
   <p>
-    <strong>Password digest:</strong>
-    <%= @user.password_digest %>
-  </p>
-
-  <p>
     <strong>Create address:</strong>
-    <%= @user.create_address %>
-  </p>
-
-  <p>
-    <strong>Return address:</strong>
-    <%= @user.return_address %>
-  </p>
-
-  <p>
-    <strong>Word create address:</strong>
     <%= translate_address @user.create_address %>
   </p>
 
   <p>
-    <strong>Word return address:</strong>
+    <strong>Return address:</strong>
     <%= translate_address @user.return_address %>
   </p>
 
-  <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-warning col-md-2" %>
-  <%= link_to 'Back', users_path, class: "btn btn-info col-md-2" %>
+  <%= link_to 'All users', users_path, class: "btn btn-default col-md-12" %>
 </div>
