--- a/admin/app/assets/stylesheets/application.css.scss
+++ b/admin/app/assets/stylesheets/application.css.scss
@@ -31,7 +31,7 @@ body {
   color: #FFFFFF !important;
 }
 
-.navbar-nav > .open > a:focus {
+.navbar-nav > .open > a {
   background-color: #FFA446 !important;
 }
 
