--- a/admin/app/views/users/_form.html.erb
+++ b/admin/app/views/users/_form.html.erb
@@ -6,6 +6,6 @@
     <%= f.text_field :email %>
     <%= f.password_field :password %>
 
-    <%= f.submit nil, class: "btn btn-success col-md-4" %>
+    <%= f.submit nil, class: "btn btn-default col-md-12" %>
   <% end %>
 </div>
