--- a/admin/app/views/users/edit.html.erb
+++ b/admin/app/views/users/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="users">
-  <h1>Editing user</h1>
+  <div class="pull-right">
+    <%= link_to 'Back', users_path, class: "btn btn-default" %>
+    <%= link_to 'Show', @user, class: "btn btn-default" %>
+  </div>
+  <h2>Editing user</h2>
 
   <%= render 'form' %>
-
-  <div class="row footer-links">
-    <%= link_to 'Show', @user, class: "btn btn-primary col-md-2" %>
-    <%= link_to 'Back', users_path, class: "btn btn-info col-md-2" %>
   </div>
 </div>
