--- a/admin/app/views/users/index.html.erb
+++ b/admin/app/views/users/index.html.erb
@@ -1,32 +1,30 @@
 <div class="users col-md-12">
   <div class="row">
     <h2>Listing users</h1>
-  </div>
-  <table class="table table-striped table-condensed">
-    <thead>
-      <tr>
-        <th>Email</th>
-        <th>Create address</th>
-        <th>Return address</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @users.each do |user| %>
+    <table class="table table-striped table-condensed">
+      <thead>
         <tr>
-          <td><%= user.email %></td>
-          <td><%= translate_address user.create_address %></td>
-          <td><%= translate_address user.return_address %></td>
-          <td><%= link_to 'Show', user, class: "btn btn-default" %></td>
-          <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-default" %></td>
-          <td><%= link_to 'Destroy', user, class: "btn btn-default", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Email</th>
+          <th>Create address</th>
+          <th>Return address</th>
+          <th colspan="2"></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
 
-  <div class="col-md-12">
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.email %></td>
+            <td><%= translate_address user.create_address %></td>
+            <td><%= translate_address user.return_address %></td>
+            <td><%= link_to 'Show', user, class: "btn btn-default" %></td>
+            <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-default" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="row">
     <%= link_to 'New User', new_user_path, class: "btn btn-default col-md-12" %>
   </div>
 </div>
