--- a/admin/app/views/transactions/_coupons.html.erb
+++ b/admin/app/views/transactions/_coupons.html.erb
@@ -2,9 +2,8 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Creator</th>
       <th>Title</th>
-      <th>Issue</th>
+      <th>Send coupon to mobile ID</th>
       <th>Delete</th>
     </tr>
   </thead>
@@ -12,7 +11,6 @@
   <tbody>
     <% @coupons.each do |coupon| %>
       <tr>
-        <td><%= translate_address coupon['creatorAddress'] %></td>
         <td><%= coupon['payload'] %></td>
         <td><%= render 'issue_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
         <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Delete' %></td>
