--- a/admin/app/views/transactions/_issue_form.html.erb
+++ b/admin/app/views/transactions/_issue_form.html.erb
@@ -3,9 +3,9 @@
   <%= text_field_tag 'payload', payload, hidden: true %>
   <div class="form-group">
     <div class="input-group">
-      <%= text_field_tag 'receiver_address', '', class: 'form-control' %>
+      <%= text_field_tag 'receiver_address', '', placeholder: 'Mobile ID', class: 'form-control' %>
       <div class="input-group-btn">
-        <%= submit_tag 'Issue', class: "btn btn-default" %>
+        <%= submit_tag 'Send', class: "btn btn-default" %>
       </div>
     </div>
   </div>
