--- a/admin/app/views/transactions/_returned_coupons.html.erb
+++ b/admin/app/views/transactions/_returned_coupons.html.erb
@@ -1,8 +1,7 @@
-<h2>Your returned coupons (<%= translate_address @return_address %>)</h2>
+<h2>Your returned coupons</h2>
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Creator</th>
       <th>Title</th>
       <th>Mark as spent</th>
     </tr>
@@ -11,7 +10,6 @@
   <tbody>
     <% @coupons_returned.each do |coupon| %>
       <tr>
-        <td><%= translate_address coupon['creatorAddress'] %></td>
         <td><%= coupon['payload'] %></td>
         <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'return', submit_name: 'Accept' %></td>
       </tr>
