--- a/admin/app/views/transactions/index.html.erb
+++ b/admin/app/views/transactions/index.html.erb
@@ -1,4 +1,6 @@
 <div class="users col-md-12">
+  <h2>Your id</h2>
+  <h1 style="font-weight: normal; font-size: 80px; text-transform: uppercase;"><%= translate_address @return_address %></h1>
   <div class="new-coupon-form">
     <%= render 'generate_form' %>
   </div>
