The payload contains JSON now

--- a/admin/app/views/transactions/_coupons_in_circulation.html.erb
+++ b/admin/app/views/transactions/_coupons_in_circulation.html.erb
@@ -10,7 +10,7 @@
   <tbody>
     <% @coupons_circulating.each do |coupon| %>
       <tr>
-        <td><%= coupon['coupon']['payload'] %></td>
+        <td><%= JSON.parse(coupon['coupon']['payload'])['title'] %></td>
         <td><%= translate_address coupon['ownerAddress'] %></td>
       </tr>
     <% end %>
