--- a/admin/app/views/transactions/_coupons.html.erb
+++ b/admin/app/views/transactions/_coupons.html.erb
@@ -11,7 +11,7 @@
   <tbody>
     <% @coupons.each do |coupon| %>
       <tr>
-        <td><%= coupon['payload'] %></td>
+        <td><%= JSON.parse(coupon['payload'])['title'] %></td>
         <td><%= render 'issue_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
         <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Delete' %></td>
       </tr>
