--- a/admin/app/views/transactions/_generate_form.html.erb
+++ b/admin/app/views/transactions/_generate_form.html.erb
@@ -2,15 +2,24 @@
 <%= form_tag(generate_create_transaction_path, remote: true, role: 'form', class: 'form-inline generate-form') do %>
   <div class="form-group col-md-12 col-no-padding">
     <div class="input-group col-md-12">
-      <div class="input-group-addon">Title<%= spaces(6) %></div>
+      <div class="input-group-addon">Title<%= spaces(12) %></div>
       <label for="payload" class="sr-only">Coupon title</label>
-      <%= text_field_tag 'payload', '', class: 'form-control' %>
+      <%= text_field_tag 'title', '', class: 'form-control' %>
     </div>
     <p class="help-block">Enter the title, without newlines, for the coupon, and click the generate button.</p>
   </div>
   <div class="form-group col-md-12 col-no-padding">
     <div class="input-group col-md-12">
-      <div class="input-group-addon">Amount</div>
+      <div class="input-group-addon">Description</div>
+      <label for="payload" class="sr-only">Coupon description</label>
+      <%= text_field_tag 'description', '', class: 'form-control' %>
+    </div>
+    <p class="help-block">Describe the coupon.</p>
+  </div>
+  <%= text_field_tag 'return_word', translate_address(@return_address), hidden: true %>
+  <div class="form-group col-md-12 col-no-padding">
+    <div class="input-group col-md-12">
+      <div class="input-group-addon">Amount<%= spaces(6) %></div>
       <label class="sr-only" for="amount">Amount</label>
       <%= number_field_tag 'amount', '', min: 1, class: 'form-control' %>
     </div>
