--- a/admin/app/views/transactions/_delete_form.html.erb
+++ b/admin/app/views/transactions/_delete_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_tag("/generate_delete_transaction") do %>
+<%= form_tag("/generate_delete_transaction", remote: true) do %>
   <%= text_field_tag 'public_key', creator_address, hidden: true %>
   <%= text_field_tag 'payload', payload, hidden: true %>
   <%= text_field_tag 'priv_key', private_key, hidden: true %>
-  <%= submit_tag submit_name, class: "btn btn-default" %>
+  <%= submit_tag submit_name, class: "btn btn-default", data: { disable_with: "#{submit_name.eql?('Delete') ? 'Deleting...' : 'Accepting...'}" } %>
 <% end %>
