--- a/admin/app/views/transactions/_generate_form.html.erb
+++ b/admin/app/views/transactions/_generate_form.html.erb
@@ -4,26 +4,26 @@
     <div class="input-group col-md-12">
       <div class="input-group-addon">Title<%= spaces(12) %></div>
       <label for="payload" class="sr-only">Coupon title</label>
-      <%= text_field_tag 'title', '', class: 'form-control' %>
+      <%= text_field_tag 'title', '', class: 'form-control', placeholder: '1 Lycheburger' %>
     </div>
-    <p class="help-block">Enter the title, without newlines, for the coupon, and click the generate button.</p>
+    <p class="help-block">Enter the title of the coupon.</p>
   </div>
   <div class="form-group col-md-12 col-no-padding">
     <div class="input-group col-md-12">
       <div class="input-group-addon">Description</div>
       <label for="payload" class="sr-only">Coupon description</label>
-      <%= text_field_tag 'description', '', class: 'form-control' %>
+      <%= text_field_tag 'description', '', class: 'form-control', placeholder: 'Valid in Lyche, Samfundet. Valid out 2014.' %>
     </div>
-    <p class="help-block">Describe the coupon.</p>
+    <p class="help-block">Describe the coupon, and add information for the mobile user.</p>
   </div>
   <%= text_field_tag 'return_word', translate_address(@return_address), hidden: true %>
   <div class="form-group col-md-12 col-no-padding">
     <div class="input-group col-md-12">
-      <div class="input-group-addon">Amount<%= spaces(6) %></div>
-      <label class="sr-only" for="amount">Amount</label>
-      <%= number_field_tag 'amount', '', min: 1, class: 'form-control' %>
+      <div class="input-group-addon">Number of coupons</div>
+      <label class="sr-only" for="amount">Number of coupons</label>
+      <%= number_field_tag 'amount', '', min: 1, class: 'form-control', placeholder: 3 %>
     </div>
-    <p class="help-block">Amount of coupons to generate with this title.</p>
+    <p class="help-block">The number of coupons to generate with this title.</p>
   </div>
   <div class="form-group col-md-12 col-no-padding">
     <%= submit_tag 'Generate coupon', class: "btn btn-default col-md-12 coupon-submit", data: { disable_with: "Generating..." } %>
