--- a/admin/app/views/layouts/_navbar.html.erb
+++ b/admin/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-target">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'Coupons', coupons_path %>
+        <li><%= button_to 'COUPONS', coupons_path, class: 'btn btn-default navbar-btn', method: :get %></li>
       </ul>
       <% if current_user %>
         <ul class="nav navbar-nav navbar-right">
