--- a/admin/app/views/transactions/_coupons.html.erb
+++ b/admin/app/views/transactions/_coupons.html.erb
@@ -2,16 +2,16 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Send coupon to mobile ID</th>
-      <th>Delete</th>
+      <th width="30%">Title</th>
+      <th width="50%">Send coupon to mobile ID</th>
+      <th width="20%">Delete</th>
     </tr>
   </thead>
 
   <tbody>
     <% @coupons.each do |coupon| %>
       <tr>
-        <td><%= JSON.parse(coupon['payload'])['title'] %></td>
+        <td class="break"><%= JSON.parse(coupon['payload'])['title'] %></td>
         <td><%= render 'issue_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
         <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Delete' %></td>
       </tr>
