--- a/admin/app/views/transactions/_coupons_in_circulation.html.erb
+++ b/admin/app/views/transactions/_coupons_in_circulation.html.erb
@@ -2,8 +2,8 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Owner</th>
+      <th width="50%">Title</th>
+      <th width="50%">Owner</th>
     </tr>
   </thead>
 
