--- a/admin/app/views/transactions/_returned_coupons.html.erb
+++ b/admin/app/views/transactions/_returned_coupons.html.erb
@@ -2,8 +2,8 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Mark as spent</th>
+      <th width="50%">Title</th>
+      <th width="50%">Mark as spent</th>
     </tr>
   </thead>
 
