--- a/admin/app/views/users/index.html.erb
+++ b/admin/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
 <div class="users col-md-12">
+  <div class="pull-right">
+    <%= link_to 'New User', new_user_path, class: "btn btn-default" %>
+  </div>
   <div class="row">
     <h2>Listing users</h1>
     <table class="table table-striped table-condensed">
@@ -23,8 +26,5 @@
         <% end %>
       </tbody>
     </table>
-  </div>
-  <div class="row">
-    <%= link_to 'New User', new_user_path, class: "btn btn-default col-md-12" %>
   </div>
 </div>
