Fix UI bug from last commit

--- a/admin/app/assets/stylesheets/application.css.scss
+++ b/admin/app/assets/stylesheets/application.css.scss
@@ -32,11 +32,11 @@ td.break {
   word-break: break-all;
 }
 
-.form-group {
+.send-coupon .form-group {
   width: 100% !important;
 }
 
-.input-group {
+.send-coupon .input-group {
   width: 100% !important;
 }
 
