--- a/admin/app/assets/stylesheets/application.css.scss
+++ b/admin/app/assets/stylesheets/application.css.scss
@@ -32,11 +32,11 @@ td.break {
   word-break: break-all;
 }
 
-.send-coupon .form-group {
+.form-group.send-coupon {
   width: 100% !important;
 }
 
-.send-coupon .input-group {
+.input-group.send-coupon {
   width: 100% !important;
 }
 
