Folder structure, remove unneeded files and UI fixes

--- a/admin/app/assets/stylesheets/users.css.scss
+++ b/admin/app/assets/stylesheets/users.css.scss
@@ -7,3 +7,12 @@
 
   .footer-links { margin-top: 40px; }
 }
+
+a.contact:hover {
+  color: #FF8D18 !important;
+  background-color: transparent !important;
+}
+
+a.btn-danger:visited {
+  color: #FFFFFF !important;
+}
