--- a/admin/app/views/transactions/index.html.erb
+++ b/admin/app/views/transactions/index.html.erb
@@ -1,14 +1,8 @@
 <div class="users col-md-12">
-  <div class="row new-coupon-form">
+  <div class="new-coupon-form">
     <%= render 'generate_form' %>
   </div>
-  <div class="row">
-    <%= render 'coupons' %>
-  </div>
-  <div class="row">
-    <%= render 'coupons_in_circulation' %>
-  </div>
-  <div class="row">
-    <%= render 'returned_coupons' %>
-  </div>
+  <%= render 'coupons' %>
+  <%= render 'coupons_in_circulation' %>
+  <%= render 'returned_coupons' %>
 </div>
