--- a/admin/app/views/users/edit.html.erb
+++ b/admin/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="users">
+<div class="users col-md-12">
   <div class="pull-right">
-    <%= link_to 'Back', users_path, class: "btn btn-default" %>
     <%= link_to 'Show', @user, class: "btn btn-default" %>
+    <%= link_to 'All users', users_path, class: "btn btn-default" %>
   </div>
   <h2>Editing user</h2>
 
