--- a/admin/app/views/users/show.html.erb
+++ b/admin/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<div class="users">
+<div class="users col-md-12">
   <div class="pull-right">
     <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default" %>
-    <td><%= link_to 'Destroy', @user, class: "btn btn-default", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <%= link_to 'All users', users_path, class: "btn btn-default" %>
   </div>
   <h2><%= @user.email %></h2>
 
