--- a/admin/app/views/users/welcome.html.erb
+++ b/admin/app/views/users/welcome.html.erb
@@ -1,2 +1,12 @@
-<h2>Bitcoupon Merchant</h2>
-<p>Welcome to the Bitcoupon application</p>
+<div class="col-md-12">
+  <h2>Bitcoupon Merchant</h2>
+  <p>
+    Welcome to the Bitcoupon application.
+    Log in to manage your coupons.
+  </p>
+  <p>
+    Contact <%= mail_to 'bitcoupon@list.stud.ntnu.no', 'bitcoupon@list.stud.ntnu.no', class: 'contact' %>
+    to get a user account, if you have not received
+    login credentials.
+  </p>
+</div>
