--- a/admin/app/views/layouts/_alert.html.erb
+++ b/admin/app/views/layouts/_alert.html.erb
@@ -1,8 +1,10 @@
 <% if notice or alert %>
   <div class="row">
-    <div class="alert alert-<%= notice ? "success":"danger" %> alert-dismissable" role="alert">
-      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <strong><%= notice ? notice : alert %></strong>
+    <div class="col-md-12">
+      <div class="alert alert-<%= notice ? "success":"danger" %> alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <strong><%= notice ? notice : alert %></strong>
+      </div>
     </div>
   </div>
 <% end %>
