--- a/admin/app/views/users/index.html.erb
+++ b/admin/app/views/users/index.html.erb
@@ -3,28 +3,35 @@
     <%= link_to 'New User', new_user_path, class: "btn btn-default" %>
   </div>
   <div class="row">
-    <h2>Listing users</h1>
-    <table class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th>Email</th>
-          <th>Create address</th>
-          <th>Return address</th>
-          <th colspan="2"></th>
-        </tr>
-      </thead>
+    <div class="col-md-12">
+      <h2>Listing users</h1>
+      <div class="table-responsive">
+        <table class="table table-striped table-condensed">
+          <thead>
+            <tr>
+              <th>Email</th>
+              <th>Create address</th>
+              <th>Return address</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-      <tbody>
-        <% @users.each do |user| %>
-          <tr>
-            <td><%= user.email %></td>
-            <td><%= translate_address user.create_address %></td>
-            <td><%= translate_address user.return_address %></td>
-            <td><%= link_to 'Show', user, class: "btn btn-default" %></td>
-            <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-default" %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+          <tbody>
+            <% @users.each do |user| %>
+              <tr>
+                <td><%= user.email %></td>
+                <td><%= translate_address user.create_address %></td>
+                <td><%= translate_address user.return_address %></td>
+                <td><%= link_to 'Show', user, class: "btn btn-default" %></td>
+                <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-default" %></td>
+                <td>
+                  <%= link_to 'X', user, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure you want to delete this user?' } %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
