--- a/admin/app/views/users/new.html.erb
+++ b/admin/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
-<div class="users">
+<div class="users col-md-12">
   <div class="pull-right">
     <%= link_to 'Back', users_path, class: "btn btn-default" %>
   </div>
-  <h1>New user</h1>
+  <h2>New user</h2>
 
   <%= render 'form' %>
 </div>
