--- a/admin/app/views/transactions/coupons/_created.erb
+++ b/admin/app/views/transactions/coupons/_created.erb
@@ -12,8 +12,8 @@
     <% @coupons.each do |coupon| %>
       <tr>
         <td class="break"><%= JSON.parse(coupon['payload'])['title'] %></td>
-        <td><%= render 'issue_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
-        <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Delete' %></td>
+        <td><%= render 'transactions/forms/issue', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
+        <td><%= render 'transactions/forms/delete', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Delete' %></td>
       </tr>
     <% end %>
   </tbody>
