--- a/admin/app/views/transactions/coupons/_returned.erb
+++ b/admin/app/views/transactions/coupons/_returned.erb
@@ -11,7 +11,7 @@
     <% @coupons_returned.each do |coupon| %>
       <tr>
         <td><%= JSON.parse(coupon['payload'])["title"] %></td>
-        <td><%= render 'delete_form', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'return', submit_name: 'Accept' %></td>
+        <td><%= render 'transactions/forms/delete', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'return', submit_name: 'Accept' %></td>
       </tr>
     <% end %>
   </tbody>
