--- a/admin/app/views/transactions/coupons/_circulating.erb
+++ b/admin/app/views/transactions/coupons/_circulating.erb
@@ -2,8 +2,8 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th width="50%">Title</th>
-      <th width="50%">Owner</th>
+      <th width="50%">TITLE</th>
+      <th width="50%">OWNER</th>
     </tr>
   </thead>
 
