--- a/admin/app/views/transactions/coupons/_created.erb
+++ b/admin/app/views/transactions/coupons/_created.erb
@@ -2,9 +2,9 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th width="30%">Title</th>
-      <th width="50%">Send coupon to mobile ID</th>
-      <th width="20%">Delete</th>
+      <th width="25%">TITLE</th>
+      <th width="55%">SEND COUPON TO MOBILE ID</th>
+      <th width="20%">CANCEL</th>
     </tr>
   </thead>
 
@@ -13,7 +13,7 @@
       <tr>
         <td class="break"><%= JSON.parse(coupon['payload'])['title'] %></td>
         <td><%= render 'transactions/forms/issue', creator_address: coupon['creatorAddress'], payload: coupon['payload'] %></td>
-        <td><%= render 'transactions/forms/delete', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Delete' %></td>
+        <td><%= render 'transactions/forms/delete', creator_address: coupon['creatorAddress'], payload: coupon['payload'], private_key: 'create', submit_name: 'Cancel' %></td>
       </tr>
     <% end %>
   </tbody>
