--- a/admin/app/views/transactions/coupons/_returned.erb
+++ b/admin/app/views/transactions/coupons/_returned.erb
@@ -2,8 +2,8 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th width="50%">Title</th>
-      <th width="50%">Mark as spent</th>
+      <th width="50%">TITLE</th>
+      <th width="50%">MARK AS SPENT</th>
     </tr>
   </thead>
 
