--- a/admin/app/views/users/index.html.erb
+++ b/admin/app/views/users/index.html.erb
@@ -9,9 +9,9 @@
         <table class="table table-striped table-condensed">
           <thead>
             <tr>
-              <th>Email</th>
-              <th>Create address</th>
-              <th>Return address</th>
+              <th>EMAIL</th>
+              <th>CREATE ADDRESS</th>
+              <th>RETURN ADDRESS</th>
               <th colspan="3"></th>
             </tr>
           </thead>
