--- a/admin/app/views/users/welcome.html.erb
+++ b/admin/app/views/users/welcome.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-12">
-  <h2>Bitcoupon Merchant</h2>
+  <h2>BitCoupon Merchant</h2>
   <p>
-    Welcome to the Bitcoupon application.
+    Welcome to the BitCoupon application.
     Log in to manage your coupons.
   </p>
   <p>
